
fswebcam-201001??
  
  - LDFLAGS should come after object files. (Thomas Spahni)
  - Don't display banner if the font fails to load. (Luca Niccoli)
  - Fix typos.
  - Added SGBRG8 palette type (for V4L2 source only).

fswebcam-20091224
  
  - Fix memset() error in src_v4l1.c introduced in yesterdays release.
    (Thomas Spahni)

fswebcam-20091223
  
  - Stop configure warning about datarootdir being ignored.
  - Updated the videodev.h and videodev2.h header files.
  - Corrected a number of memory leaks and a potential buffer overflow.
    (Thomas Spahni)
  - Escape minus signs in the man page. (Luca Niccoli)
  - Removed debian/ subdirectory. (Luca Niccoli)
  - Removed spec and ebuild files.
  - Free mmap()'s on error.
  - Stop skipping frames on error.

fswebcam-20070108
  
  - Fixed R<>B channel swap when using [M]JPEG or PNG.

fswebcam-20061210
  
  - Added syslog support via log command.
  - Added pidfile command for saving the process ID (PID) to file.
  - The output command has been replaced by the log command.
  - Added framedump command for dumping the raw captured data to file.
  - Added exec command for running external programs after capture.
  - Removed unnecessary malloc.h includes, replaced with the more portable
    stdlib.h where not already included. (Alexander Logvinov)
  - Fixed small bug in and simplified the configure script.
  - Fixed a bug where fswebcam wouldn't close a device if its file descriptor
    was equal to zero. Affected RAW and V4L2 sources. (Dmitry Saychenko)
  - The localtime command has been replaced by the new gmt command.
    The local timezone is now used as the default.
  - Added offset command to offset capture times in loop mode.
  - Added file-based configuration support.
  - Updated argument parser.
  - Renamed RGB24 and RGB32 to BGR24 and BGR32, and added the real
    RGB24 and RGB32 formats.
  - Added signal handler for gracefully exiting loop mode, reloading